@@ -119,6 +119,7 @@ where XXXXXX is the bug number as listed below.
 333228  AAarch64 Missing instruction encoding: mrs %[reg], ctr_el0
 333230  AAarch64 missing instruction encodings: dc, ic, dsb.
 333666  Recognize MPX instructions and bnd prefix.
+334727  Build fails with -Werror=format-security
 n-i-bz  Fix KVM_CREATE_IRQCHIP ioctl handling
 n-i-bz  s390x: Fix memory corruption for multithreaded applications
 n-i-bz  vex arm->IR: allow PC as basereg in some LDRD cases
